# windows-auto-dark-mode

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release.yml
reference/Windows-Auto-Night-Mode/: publish.bat
reference/Windows-Auto-Night-Mode/AutoDarkModeApp/ViewModels/: SystemAreasViewModel.cs
reference/Windows-Auto-Night-Mode/AutoDarkModeApp/Views/: SystemAreasPage.xaml
reference/Windows-Auto-Night-Mode/AutoDarkModeSvc/: AutoDarkModeSvc.csproj
reference/Windows-Auto-Night-Mode/AutoDarkModeSvc/Handlers/: LocationHandler.cs
reference/Windows-Auto-Night-Mode/AutoDarkModeSvc/Strings/: Resources.fa.resx  Resources.he.resx  Resources.hu.resx  Resources.it.resx  Resources.ko.resx  Resources.nb-no.resx  Resources.pt.resx  Resources.sr.resx  Resources.sv.resx  Resources.uk.resx  Resources.zh-hans.resx  Resources.zh-hant.resx
reference/Windows-Auto-Night-Mode/adm-downloader-rs/: README.md  license.html
reference/Windows-Auto-Night-Mode/adm-updater-rs/: license.html
scripts/: tauri-dev.ps1
src/: App.tsx  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: autostart.rs  config.rs  lib.rs  main.rs  scheduler.rs  theme.rs
src/components/: TimePicker.tsx
src/locales/: en.json  zh.json
src/pages/: About.tsx  Dashboard.tsx  Schedule.tsx  Settings.tsx
(+30 files in other folders)
