[package]
name = "windows-auto-dark-mode"
version = "1.0.3"
description = "Auto dark/light mode for Windows by time or location"
authors = ["you"]
edition = "2021"

[lib]
name = "windows_auto_dark_mode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
winreg = "0.52"
sunrise-sunset-calculator = "1.0"
ctrlc = "3.4"
window-vibrancy = "0.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
